# clexo

./: .gitignore  LICENSE  README.md  TODO.md  clexo  config.json  install.sh  pyproject.toml  server.py  settings.json.example
clexo/: __init__.py  __main__.py  cli.py
docs/: README.md  architecture.md  auto-restore.md  cross-ai.md  hooks.md  park.md  picking.md  searching.md  skills.md  snapshots.md  tags.md
tests/: conftest.py  test_core.py
